# android-build

./: Cargo.toml  README.md
src/: dexer.rs  java_build.rs  java_run.rs  lib.rs
src/env_paths/: find_android_sdk.rs  find_java.rs  mod.rs
